test/Dialect/LLZK/Inputs/header_5.llzk
// Imported via `include_fail.llzk`

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{'llzk.include' op expected 'builtin.module' from included file to have "veridise.lang" attribute}}
  llzk.include "Inputs/header_3.llzk" as @std

  llzk.func @test_func() {
    llzk.call @std::@pkg_two::@my_func_2() : () -> ()
    return
  }
}
